[gd_scene load_steps=2 format=3 uid="uid://ch88imkihrety"]

[ext_resource type="Script" uid="uid://x77ewlpspx8q" path="res://actor_builders/mech_builder/perk_option_button.gd" id="1_oij8f"]

[node name="PerkOptionButton" type="OptionButton"]
theme_override_font_sizes/font_size = 12
script = ExtResource("1_oij8f")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.145098, 0.145098, 0.145098, 1)

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -48.0
offset_top = 2.0
offset_right = -8.0
offset_bottom = 25.0

[connection signal="item_selected" from="." to="." method="_on_item_selected"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
